--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 :root {
   --lightblue-color: #f1f4ff;
-  --primary-color: #007bff;
 }
 
 body {
@@ -32,8 +31,15 @@ body {
   font-weight: 300;
 }
 
-footer {
-  color: white;
+.footer {
+  color: rgb(18, 18, 18);
+}
+
+.nav-link:hover {
+  background-color: white;
+  border-radius: 5px;
+  padding: 0;
+  margin: 0;
 }
 .gradient-background {
   background: linear-gradient(300deg, #0037ff, #ff4cc6, #ebef72);
